2009-02-26  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/network.py: Remove useless import.
	* bin/service.py (loadConfig, Service.__init__): Rename shadowed builtin variables.
	* bin/update-environment.py (read_env_d): Rename shadowed builtin variables.
	* bin/mudur.py:
	Comment the code,
	Rename some functions for better self-explanation,
	Split setupUdev() to setupUdev() and startUdev(),
	Make the code pychecker clean.
	* bin/mudur.py (loadFile, writeToFile):
	Use open() instead of file().
	* bin/mudur.py (setupUdev):
	Limit the size of /dev to 10M,
	No need to traverse /lib/udev/devices, just copy it recursively,
	Remove uevent_helper hack for older kernels.
	* bin/mudur.py (startUdev):
	Use start-stop-daemon for udev monitor startup/cleanup.
	* bin/mudur.py (stopSystem):
	Call stopUdev() to stop udev daemon.

2009-02-25  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py (copyUdevFiles): Implement a new method for
	copying the rules and log file instead of spawning a new process.

2009-02-23  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py (setupUdev):
	Use start-stop-daemon for udev startup,
	The default timeout is 180, no need to give it as a parameter,
	Call "udevadm monitor" for logging into /dev/.udev.log,
	Call /usr/bin/udevsync after rw remounting of the root filesystem
	for copying the log file and the persistent network/cdrom rules
	from /dev into /var/log and /etc (#8458, #8520).

2009-02-21  Fatih Aşıcı <fatih@pardus.org.tr>
	* bin/mudur.py (startServices): Increase timeout for waiting X
	socket to be ready and do not wait if xorg=off is passed on kernel
	command line.

2009-02-02  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py (stopSystem): Use lambda function for sort helper.

2009-02-02  Bahadır Kandemir <bahadir@pardus.org.tr>
	* bin/mudur.py: Handle logger.sync() exceptions (Fixes #7410).

2009-01-25  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py: Drop legacy kernel check for udev initialization.
